--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  margin-top: 8rem;
+}
+
+.toggle {
+  text-decoration: line-through;
+}
+
+.react-icon {
+  cursor: pointer;
+  font-size: 1.3rem;
+  transition: all .7s;
+}
+
+.react-icon:hover {
+  color: #DC3545;
+}
+
+.plus-icon {
+  color: #28A745;
+  transition: all .7s;
+  cursor: pointer;
+}
+
+.plus-icon:hover {
   color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: #28A745;
+  border: none;
+  outline: none;
 }
